# toolbox

./: README.md
api_workloads_with_spark/: 100_questions_about_databricks_technology.txt  README.md  inference-using-openai-client.py  scaling-api-based-workloads-on-spark.py  udf-and-inference-with-spark.py  utils.py
delta_tables_utilities/file_manifest_utility/: README for file manifest.md  sql for table history manifest.ipynb  use_jar_example.ipynb
spark_streaming_listener/: README.md  streaming listener usage example.py  streaming_listener.py
spark_task_info/: README.md  pyproject.toml
spark_task_info/docs/: Notes.md
spark_task_info/src/spark_task_info/: __init__.py  spark_task_info.py
